# wbfmm

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.safe  README  README.md  TODO  TODO~  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  doxy.txt  libtool  normals  notes.tex~  scratch  targets.c  wbfmm.pc  wbfmm.pc.in
Data/: fcheck.m  fcheck.m~  fmm-laplace-test  fmm-laplace-test~  fmm-test  fmm-test-float  fmm-test~  ipfile.dat~  lapcheck.m  lapcheck.m~  log  log1  max.bc
autom4te.cache/: output.0  output.1  output.10  output.11  output.14  output.16  output.18  output.2  output.20  output.22  output.23  output.25  output.26  output.27  output.28  output.3  output.4  output.5  output.6  output.7  output.8  output.9  requests  traces.0  traces.1  traces.10  traces.11  traces.12  traces.13  traces.14  traces.15  traces.16  traces.17  traces.18  traces.19  traces.2  traces.20  traces.21  traces.22  traces.23  (+12 more)
doc/: Makefile  Makefile.in  doxygen_sqlite3.db  notes.tex  notes.tex~  wbfmm.dxy  wbfmm.ps
doc/auto/: notes.el
doc/doxy/: wbfmm.dxy  wbfmm.dxy.bak
doc/html/: Makefile  Makefile.am  Makefile.in  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  formula.repository  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  group__boxes.html  group__expansions.html  group__indexing.html  group__laplace.html  group__pass.html  group__rotations.html  group__shift.html  group__targets.html  group__translations.html  group__util.html  index.html  indexing_8c.html  menudata.js  modules.html  structwbfmm__box__t.html  structwbfmm__library__config__t.html  structwbfmm__shift__operators__t.html  structwbfmm__target__list__t.html  structwbfmm__tree__t.html  tree_8c.html  wbfmm_8h.html
doc/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  group__boxes.tex  group__pass.aux  (+33 more)
doxy/: wbfmm.dxy
html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  group__boxes.html  group__expansions.html  group__indexing.html  group__laplace.html  group__pass.html  group__rotations.html  group__shift.html  group__translations.html  group__util.html  index.html  modules.html  structwbfmm__box__t.html  structwbfmm__shift__operators__t.html  structwbfmm__target__list__t.html  structwbfmm__tree__t.html  tree_8c.html  wbfmm_8h.html
latex/: annotated.tex  group__boxes.tex  group__laplace.tex  group__pass.tex  group__rotations.tex  group__shift.tex  group__translations.tex  refman.tex  structwbfmm__shift__operators__t.tex  structwbfmm__tree__t.tex  tree_8c.tex  wbfmm_8h.tex
notes/: notes.aux  notes.bbl  notes.blg  notes.tex
octave/: calcfield.m  dxyrtest.m  dxytest.m  dxytest.m~  fldcheck.m  idxcheck.m  idxcheck.m~  ldcheck.m  ldcheck.m~  mkfpoints.m  mksources.m  nlegendre.m  readpts.m  readpts.m~  rnmfunc.m  scratch  sfunc.m  sfunc.m~  snmfunc.m  snmfunc.m~  test-helmholtz  test-laplace  xyfunc.m  xyfunc.m~
src/: Makefile  Makefile.am  Makefile.in  boxes.c  boxes.lo  config.c  constants.c  curl-laplace.c  curl-laplace.lo  direct-laplace.c  direct.c  documentation.c  documentation.c.in  documentation.lo  doxy.txt  expansions.c  expansions.lo  factorial.c  factorial.lo  gradient-laplace.c  gradient-laplace.c~  gradient-laplace.lo  gradient.c  gradient.c~  indexing.c  indexing.lo  laplace-local.c  laplace.c  libsub.la  libsub_la-boxes.lo  libsub_la-curl-laplace.lo  libsub_la-expansions.lo  libsub_la-gradient-laplace.lo  libsub_la-gradient.lo  libsub_la-laplace.lo  libsub_la-local.lo  libsub_la-pass-laplace.lo  libsub_la-pass.lo  libsub_la-rotations-laplace.lo  libsub_la-rotations.lo  (+72 more)
tests/: Makefile  Makefile.am  Makefile.in  input1  input2  make-source  make-source-float  maxdiff  scratch.dat~  test-helmholtz  test-laplace  tt  wbfmm-direct-calc  wbfmm-direct-calc-float  wbfmm-direct-calc-float.c  wbfmm-direct-calc.c  wbfmm-direct-calc.c.in  wbfmm-laplace-direct-calc  wbfmm-laplace-direct-calc-float  wbfmm-laplace-direct-calc-float.c  wbfmm-laplace-direct-calc.c  wbfmm-laplace-direct-calc.c.in  wbfmm-laplace-tests  wbfmm-laplace-tests-avx  wbfmm-laplace-tests-float  wbfmm-laplace-tests-float.c  wbfmm-laplace-tests.c  wbfmm-laplace-tests.c.in  wbfmm-laplace-tree-calc  wbfmm-laplace-tree-calc-avx  wbfmm-laplace-tree-calc-float  wbfmm-laplace-tree-calc-float.c  wbfmm-laplace-tree-calc.c  wbfmm-laplace-tree-calc.c.in  wbfmm-tests  wbfmm-tests-avx  wbfmm-tests-float  wbfmm-tests-float.c  wbfmm-tests.c  wbfmm-tests.c.in  (+6 more)
tests/.deps/: wbfmm-direct-calc-float.Po  wbfmm-direct-calc.Po  wbfmm-laplace-direct-calc-float.Po  wbfmm-laplace-direct-calc.Po  wbfmm-laplace-tests-float.Po  wbfmm-laplace-tests.Po  wbfmm-laplace-tree-calc-float.Po  wbfmm-laplace-tree-calc.Po  wbfmm-optimization.Po  wbfmm-tests-float.Po  wbfmm-tests.Po  wbfmm-tree-calc-float.Po  wbfmm-tree-calc.Po  wbfmm_laplace_tests_avx-wbfmm-laplace-tests.Po  wbfmm_laplace_tree_calc_avx-wbfmm-laplace-tree-calc.Po  wbfmm_tests_avx-wbfmm-tests.Po  wbfmm_tree_calc_avx-wbfmm-tree-calc.Po
tools/: Makefile.in  make-source  make-source-float  wbfmm-direct-calc  wbfmm-direct-calc-float  wbfmm-direct-calc-float.c  wbfmm-direct-calc.c  wbfmm-direct-calc.c.in  wbfmm-laplace-direct-calc  wbfmm-laplace-direct-calc-float  wbfmm-laplace-direct-calc-float.c  wbfmm-laplace-direct-calc.c  wbfmm-laplace-direct-calc.c.in  wbfmm-laplace-tests  wbfmm-laplace-tests-avx  wbfmm-laplace-tests-float  wbfmm-laplace-tests-float.c  wbfmm-laplace-tests.c  wbfmm-laplace-tests.c.in  wbfmm-laplace-tree-calc  wbfmm-laplace-tree-calc-avx  wbfmm-laplace-tree-calc-float  wbfmm-laplace-tree-calc-float.c  wbfmm-laplace-tree-calc.c  wbfmm-laplace-tree-calc.c.in  wbfmm-tests  wbfmm-tests-avx  wbfmm-tests-float  wbfmm-tests-float.c  wbfmm-tests.c.in  wbfmm-tree-calc  wbfmm-tree-calc-avx  wbfmm-tree-calc-float  wbfmm-tree-calc-float.c  wbfmm-tree-calc.c  wbfmm-tree-calc.c.in
(+119 files in other folders)
